--- a/SwipeTabBarController/Resources/Base.lproj/Main.storyboard
+++ b/SwipeTabBarController/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EqQ-iO-y1f">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EqQ-iO-y1f">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -113,7 +113,19 @@
                     <view key="view" contentMode="scaleToFill" id="kyY-wc-1jQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pRy-Qo-TnK">
+                                <rect key="frame" x="20" y="671" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="pRy-Qo-TnK" firstAttribute="leading" secondItem="tb5-fl-Rr0" secondAttribute="leading" constant="20" id="DrZ-sQ-0ES"/>
+                            <constraint firstItem="tb5-fl-Rr0" firstAttribute="bottom" secondItem="pRy-Qo-TnK" secondAttribute="bottom" constant="20" id="N50-8a-toS"/>
+                            <constraint firstItem="tb5-fl-Rr0" firstAttribute="trailing" secondItem="pRy-Qo-TnK" secondAttribute="trailing" constant="20" id="VMP-DN-7wN"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="tb5-fl-Rr0"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 2" id="Hde-iH-uXQ"/>
